# lvdt

./: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  rustfmt.toml
.cargo/: config.toml
src/: agc.rs  button.rs  clocks.rs  cordic.rs  display.rs  excitation.rs  iq.rs  lib.rs  lut.rs  main.rs  pga.rs  sampling.rs  usb_cdc.rs
