[package]
name = "lvdt"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-graphics = "0.8"
embedded-hal = "1.0"
fugit = "0.3"
heapless = "0.8"
libm = "0.2"
profont = "0.7"
ssd1306 = "0.10"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1.0", features = ["cortex-m-systick"] }
stm32g4xx-hal = { version = "0.1.0", features = ["stm32g474", "rt", "usb", "defmt", "cordic"] }
usb-device = "0.3"
usbd-serial = "0.2.2"

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = 1

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
